--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: pesca-app
-    env: php
+    env: docker
     plan: free
     buildCommand: ""
-    startCommand: "php -S 0.0.0.0:10000"
+    startCommand: ""
